@@ -11,6 +11,7 @@ x.x:
 - fixed: running deactivation scripts could break other subsites
 - fixed: subsite admins could access translation_editor
 - fixed: pagination on online members listing
+- fixed: not all entities are deleted when the subsite is
 - changed: subsite admin listing now has pagination
 - changed: non-members of subsites are not forced to join, but can view public content
 - changed: Google Analytics now uses IP adres anonimization
